--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 
     --clr-light: #fff;
     --clr-dark: #4b4b4b;
-    --clr-accent: #514ef7;
+    --clr-accent: #2b39cf;
     --clr-accent2: #42e433;
 
     --fs-h1: 3rem;
