--- a/style.css
+++ b/style.css
@@ -123,25 +123,30 @@ h3 {font-size: var(--fs-h3);}
 }
 
 .section__title--work {
-    color: var(--clr-light);
+    color: var(--clr-dark);
     padding: .5em;
-    background-color: var(--clr-accent);
     width: fit-content;
     margin: auto;
-    box-shadow: var(--bs);
     border-radius: 10px;
     font-weight: var(--fw-reg);
 }
 
+.section__title--work strong {
+    color: var(--clr-accent);
+    font-weight: var(--fw-reg);
+}
+
 .section__title--work2 {
-    color: var(--clr-light);
+    color: var(--clr-dark);
     width: fit-content;
     padding: .5em;
-    background-color: var(--clr-accent2);
-    box-shadow: var(--bs);
     margin: auto;
-    margin-bottom: 1em;
     border-radius: 10px;
+    font-weight: var(--fw-reg);
+}
+
+.section__title--work2 strong {
+    color: var(--clr-accent2);
     font-weight: var(--fw-reg);
 }
 
@@ -311,14 +316,12 @@ header {
 
 .avgTable {
     margin: auto;
-    padding: 1em;
 }
 
 .gameDiv {
-    border: 1.5px solid var(--clr-dark);
+    border: 1px solid var(--clr-dark);
     border-radius: 10px;
-    box-shadow: var(--bs);
-    padding: .5em;
+    padding-top: .5em;
     margin: auto;
 }
 
@@ -331,6 +334,107 @@ header {
 .gameTables th, td {
     padding: .25em;
 }
+
+.carousel {
+    margin: 0 auto;
+    overflow: hidden;
+    text-align: center;
+    padding: 0;
+  }
+  
+  .slides {
+    width: 100%;
+    display: flex;
+    overflow-x: scroll;
+    scrollbar-width: none;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+  }
+  
+  .slides::-webkit-scrollbar {
+    display: none;
+  }
+  
+  .slides-item {
+    align-items: center;
+    border-radius: 10px;
+    display: flex;
+    flex-shrink: 0;
+    justify-content: center;
+    margin: 0 1rem;
+    position: relative;
+    scroll-snap-align: start;
+    transform: scale(1);
+    transform-origin: center center;
+    transition: transform .5s;
+    width: 100%;
+  }
+  
+  .carousel__nav {
+    padding: 1.25rem .5rem;
+  }
+  
+  .slider-nav {
+    align-items: center;
+    background-color: #ddd;
+    border-radius: 50%;
+    color: #000;
+    display: inline-flex;
+    height: 1.5rem;
+    justify-content: center;
+    padding: .5rem;
+    position: relative;
+    text-decoration: none;
+    width: 1.5rem;
+  }
+  
+  .slider-nav:hover,
+  .slider-nav:active {
+    background-color: #000;
+    color: #fff;
+  }
+  
+  .slide-1 {
+    background-color: #fdc;
+  }
+  
+  .slide-2 {
+    background-color: #bfd;
+  }
+  
+  .slide-3 {
+    background-color: #cdf;
+  }
+  
+  .slide-4 {
+    background-color: #dca;
+  }
+  
+  .slide-5 {
+    background-color: #ffc;
+  }
+  
+  .carousel__skip-link {
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    top: auto;
+    width: 1px;
+  }
+  
+  .carousel__skip-link:focus {
+    align-items: center;
+    background-color: #000;
+    color: #fff;
+    display: flex;
+    font-size: 30px;
+    height: 680px;
+    justify-content: center;
+    opacity: .8;
+    text-decoration: none;
+    width: 100%;
+    z-index: 1;
+  }
 
 /* My services section */
 
