--- a/style.css
+++ b/style.css
@@ -37,6 +37,10 @@
 }
 
 /* General style */
+html, body {
+    /* IE 10-11 didn't like using min-height */
+    height: 100%;
+  }
 
 html {
     scroll-behavior: smooth;
@@ -49,6 +53,8 @@ body {
     font-family: var(--ff-primary);
     font-size: var(--fs-body);
     line-height: 1.6;
+    display: flex;
+  flex-direction: column;
 }
 
 section {
@@ -318,6 +324,11 @@ header {
     }
 }
 
+.player-button {
+    padding: .5em;
+    margin: .5em;
+}
+
 .statsDisplay {
     display: none;
 }
@@ -540,6 +551,7 @@ header {
     background-color: var(--clr-light);
     color: var(--clr-dark);
     text-align: center;
+    flex: 1 0 auto; /* Prevent Chrome, Opera, and Safari from letting these items shrink to smaller than their content's default minimum size. */
 }
 
 .portfolio {
@@ -584,6 +596,7 @@ header {
     text-align: center;
     padding: 2.5em 0;
     font-size: var(--fs-h3);
+    flex-shrink: 0;
 }
 
 .footer a { 
@@ -657,4 +670,9 @@ header {
 
   .searchButton {
     margin-top: .5em;
+  }
+
+  .searchResults {
+    display: flex;
+    flex-wrap: wrap;
   }
