Added header links on logo/icon

--- a/style.css
+++ b/style.css
@@ -180,6 +180,11 @@ header {
     z-index: 1000;
 }
 
+.headerLink {
+    text-decoration: none;
+    color: var(--clr-dark);
+}
+
 .logo {
     max-width: 100px;
 }
